--- a/styles.css
+++ b/styles.css
@@ -864,16 +864,16 @@ img {
 /* 響應式設計 */
 @media (max-width: 768px) {
 
-    /* 書法頁面：照片瀏覽容器放大20%，讓使用者更好看到照片內容 */
+    /* 書法頁面：照片瀏覽容器放大20%（整個容器） */
     #calligraphy .artwork-group {
-        transform: scale(1.100736);
-        /* 放大20%: 0.91728 * 1.2 = 1.100736 */
+        transform: scale(1.3208832);
+        /* 再放大20%: 1.100736 * 1.2 = 1.3208832 */
     }
 
     #calligraphy .image-gallery {
         position: relative;
-        padding: 0 39.2px;
-        /* 再靠近20%: 49px * 0.8 = 39.2px */
+        padding: 0 31.36px;
+        /* 更靠近20%: 39.2px * 0.8 = 31.36px，配合箭頭更靠近照片 */
     }
 
     #calligraphy .gallery-nav {
@@ -885,13 +885,13 @@ img {
     }
 
     #calligraphy .gallery-prev {
-        left: -33.6px;
-        /* 再靠近20%: -42px * 0.8 = -33.6px */
+        left: -26.88px;
+        /* 更靠近照片20%: -33.6px * 0.8 = -26.88px */
     }
 
     #calligraphy .gallery-next {
-        right: -33.6px;
-        /* 再靠近20%: -42px * 0.8 = -33.6px */
+        right: -26.88px;
+        /* 更靠近照片20%: -33.6px * 0.8 = -26.88px */
     }
 
     /* 移除書法頁照片的白線，小照片與大照片用一樣的尺寸顯示 */
@@ -1201,15 +1201,15 @@ img {
         line-height: 32px;
     }
 
-    /* 繪畫頁面：照片縮小30%，作品說明縮小30% */
+    /* 繪畫頁面：照片放大30%（整個容器） */
     #painting .painting-item {
-        height: 33.6vh;
-        /* 縮小30%: 48vh * 0.7 = 33.6vh */
+        height: 43.68vh;
+        /* 放大30%: 33.6vh * 1.3 = 43.68vh */
     }
 
     #painting .painting-item.small-size {
-        height: 20.16vh;
-        /* 縮小30%: 28.8vh * 0.7 = 20.16vh */
+        height: 26.208vh;
+        /* 放大30%: 20.16vh * 1.3 = 26.208vh */
     }
 
     #painting .caption {
